<resources>
    <string name="app_name">FoodBreak</string>
    <string name="home">Home</string>
    <string name="my_profile">My Profile</string>
    <string name="favorite_restaurants">Favorite Restaurants</string>
    <string name="order_history">Order History</string>
    <string name="faqs">FAQs</string>
    <string name="log_out">Log out</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
